# open-store

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
modules/: app.py  rfid.py  screen.py  state.py  statemanager.py  view.py  viewmanager.py
states/: hold.py  setup.py  start.py
views/: hold.py  setup.py  start.py
